--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "0f04695b-03db-4fba-9ce4-f55e75ef6276"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
